--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,18 @@
-{"name": "tradeverse-backend", "version": "1.0.0", "scripts": {"start": "node server.js", "worker": "node worker.js"}}
+{
+  "name": "tradeverse-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node server.js",
+    "worker": "node worker.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "pg": "^8.11.3",
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.0",
+    "uuid": "^9.0.1"
+  }
+}
